<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2013 Daniel Grech
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="support_email">dgsoftwaredevelopment@gmail.com</string>

    <string name="app_name">Shift Tracker</string>
    <string name="go_to">Go To</string>
    <string name="stats">Stats</string>
    <string name="today">Today</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="add_shift">Add Shift</string>
    <string name="add_shift_plus">Add Shift +</string>
    <string name="total">Total</string>
    <string name="done">Done</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="dollars_per_hour">$ / hour</string>
    <string name="mins">mins</string>
    <string name="pay_rate">Pay Rate</string>
    <string name="unpaid_break">Unpaid Break</string>
    <string name="delete">Delete</string>
    <string name="contact">Contact</string>
    <string name="contact_support">Contact Support</string>
    <string name="licenses">Licenses</string>
    <string name="version">Version</string>
    <string name="copyright">Copyright</string>
    <string name="copyright_summary">Copyright © DGSD</string>
    <string name="save_shift_as_template">Save shift as template</string>
    <string name="from_template">From Template</string>
    <string name="create_new">Create New</string>
    <string name="shift_templates">Shift Templates</string>
    <string name="no_templates">No templates saved</string>
    <string name="month">Month</string>
    <string name="three_months">3 Months</string>
    <string name="six_months">6 Months</string>
    <string name="nine_months">9 Months</string>
    <string name="year">Year</string>
    <string name="hour_and_income_summary">Income earned and hours worked over the past:</string>
    <string name="get_full_version">Get full version</string>
    <string name="feature_unavailable">Feature Unavailable</string>
    <string name="summary_unavailable_message">View a summary of your earnings over different time spans.\n\nThis and other great features are available in the full version of this app!</string>
    <string name="reminder">Reminder</string>
    <string name="reminders_unavailable_message">Set a reminder alert for this shift.\n\nThis and other great features are available in the full version of this app!</string>
    <string name="export_unavailable_message">Export your data for easy analysis and backup.\n\nThis and other great features are available in the full version of this app!</string>
    <string name="animation_unavailable_message">Set a different animation when moving between weeks.\n\nThis and other great features are available in the full version of this app!</string>
    <string name="export_to_calendar">Export to calendar</string>
    <string name="exporting_data">Exporting Data</string>

    <!-- Settings -->
    <string name="settings_category_display">Display</string>
    <string name="settings_category_about">@string/about</string>
    <string name="settings_category_defaults">Defaults</string>
    <string name="settings_category_data">Data</string>
    <string name="settings_category_"></string>

    <string name="settings_key_start_day">start_day</string>
    <string name="settings_key_show_total_hours">show_total_hours</string>
    <string name="settings_key_show_income">show_income</string>
    <string name="settings_key_default_start_time">default_start_time</string>
    <string name="settings_key_default_end_time">default_end_time</string>
    <string name="settings_key_version">version</string>
    <string name="settings_key_default_break_duration">default_break_duration</string>
    <string name="settings_key_default_pay_rate">default_pay_rate</string>
    <string name="settings_key_rate">rate</string>
    <string name="settings_key_default_reminder">default_reminder</string>
    <string name="settings_key_export">export</string>
    <string name="settings_key_animation">pager_animation</string>

    <string name="settings_title_start_day">Week Start Day</string>
    <string name="settings_title_show_total_hours">Show Total Hours</string>
    <string name="settings_title_show_income">Show Income</string>
    <string name="settings_title_default_start_time">Default Start Time</string>
    <string name="settings_title_default_end_time">Default End Time</string>
    <string name="settings_title_default_break_duration">Default Unpaid Break Duration</string>
    <string name="settings_title_default_pay_rate">Default Payrate</string>
    <string name="settings_title_default_reminder">Default Reminder</string>
    <string name="settings_title_rate">Rate</string>
    <string name="settings_title_export">Export</string>
    <string name="settings_title_animation">Pager Animation</string>

    <string name="settings_summary_start_day">The first day of your week</string>
    <string name="settings_summary_show_total_hours">Show the total number of hours worked in a week</string>
    <string name="settings_summary_show_income">Show your income in the interface</string>
    <string name="settings_summary_default_start_time">The default start time to use when creating a new shift</string>
    <string name="settings_summary_default_end_time">The default end time to use when creating a new shift</string>
    <string name="settings_summary_default_break_duration">Default duration for unpaid breaks</string>
    <string name="settings_summary_default_pay_rate">Default payrate ($/hour)</string>
    <string name="settings_summary_default_reminder">Default reminder for new shifts</string>
    <string name="settings_summary_rate">Rate the app in the store!</string>
    <string name="settings_summary_export">Export all your data to a csv file</string>
    <string name="settings_summary_animation">The animation to use when paging between weeks</string>

    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="days_of_week_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>0</item>
    </string-array>

    <string-array name="reminder_minutes_labels">
        <item>None</item>
        <item>On time</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>2 days</item>
        <item>1 week</item>
    </string-array>

    <string-array name="reminder_minutes_values" translatable="false">
        <item>"-1"</item>
        <item>"0"</item>
        <item>"1"</item>
        <item>"5"</item>
        <item>"10"</item>
        <item>"15"</item>
        <item>"20"</item>
        <item>"25"</item>
        <item>"30"</item>
        <item>"45"</item>
        <item>"60"</item>
        <item>"120"</item>
        <item>"180"</item>
        <item>"720"</item>
        <item>"1440"</item>
        <item>"2880"</item>
        <item>"10080"</item>
    </string-array>

    <string-array name="animation_types">
        <item>Plain</item>
        <item>Inner cube</item>
        <item>Outer cube</item>
        <item>Twist</item>
        <item>Compress</item>
    </string-array>

    <string-array name="animation_types_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="nav_items">
        <item>Week</item>
        <item>Month</item>
    </string-array>

</resources>

