<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:paddingTop="16dip"
    android:paddingLeft="@dimen/edit_shift_side_padding"
    android:paddingRight="@dimen/edit_shift_side_padding">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Focusable to stop edit texts taking focus! -->
        <TextView
            android:id="@+id/name_label"
            android:text="@string/name"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/edit_shift_title"/>

        <com.dgsd.android.ShiftTracker.View.StatefulAutoCompleteTextView
            android:id="@+id/name"
            android:nextFocusUp="@id/name"
            android:nextFocusLeft="@id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext|flagNavigateNext"
            android:inputType="textCapSentences"
            android:nextFocusForward="@+id/pay_rate"
            android:nextFocusRight="@+id/pay_rate"
            android:nextFocusDown="@+id/pay_rate"
            android:singleLine="true"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="8dip"/>

        <TextView
            android:id="@+id/date_label"
            android:text="@string/date"
            style="@style/edit_shift_title"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginBottom="8dip"
            android:background="@drawable/selectable_line_with_triangle"
            android:gravity="left|center_vertical"
            android:textSize="20sp"
            android:singleLine="true"
            android:paddingLeft="12dip"
            android:fontFamily="sans-serif-light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/start_label"
                android:text="@string/start"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                style="@style/edit_shift_title"/>

            <TextView
                android:id="@+id/end_label"
                android:text="@string/end"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                style="@style/edit_shift_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginBottom="8dip">

            <TextView
                android:id="@+id/start_time"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:background="@drawable/selectable_line_with_triangle"
                android:gravity="left|center_vertical"
                android:textSize="20sp"
                android:singleLine="true"
                android:paddingLeft="12dip"
                android:fontFamily="sans-serif-light"/>

            <TextView
                android:id="@+id/end_time"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:background="@drawable/selectable_line_with_triangle"
                android:gravity="left|center_vertical"
                android:textSize="20sp"
                android:singleLine="true"
                android:paddingLeft="12dip"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/pay_label"
                android:text="@string/pay_rate"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                style="@style/edit_shift_title"/>

            <TextView
                android:id="@+id/break_label"
                android:text="@string/unpaid_break"
                android:layout_height="wrap_content"
                android:layout_width="0dip"
                android:layout_weight="1"
                style="@style/edit_shift_title"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:layout_marginBottom="8dip">

            <com.dgsd.android.ShiftTracker.View.StatefulEditText
                android:id="@+id/pay_rate"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:textSize="20sp"
                android:inputType="numberDecimal"
                android:hint="@string/dollars_per_hour"
                android:singleLine="true"
                android:imeOptions="actionNext|flagNavigateNext"
                android:nextFocusRight="@+id/unpaid_break"
                android:nextFocusDown="@+id/notes"
                android:nextFocusForward="@+id/unpaid_break"
                android:fontFamily="sans-serif-light"/>

            <com.dgsd.android.ShiftTracker.View.StatefulEditText
                android:id="@+id/unpaid_break"
                android:layout_height="match_parent"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:imeOptions="actionNext|flagNavigateNext"
                android:inputType="number"
                android:textSize="20sp"
                android:hint="@string/mins"
                android:singleLine="true"
                android:nextFocusDown="@+id/notes"
                android:nextFocusLeft="@id/pay_rate"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <TextView
            android:id="@+id/notes_label"
            android:text="@string/notes"
            style="@style/edit_shift_title"/>

        <com.dgsd.android.ShiftTracker.View.StatefulEditText
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="left|bottom"
            android:nextFocusUp="@id/unpaid_break"
            android:fontFamily="sans-serif-light"
            android:layout_marginBottom="8dip"/>

        <TextView
            android:id="@+id/reminders_label"
            android:text="@string/reminder"
            style="@style/edit_shift_title"/>

        <Spinner
            android:id="@+id/reminders"
            android:layout_width="match_parent"
            android:layout_height="45dip"
            android:entries="@array/reminder_minutes_labels"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="16dip"/>

        <CheckBox
            android:id="@+id/is_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="15sp"
            android:layout_marginLeft="12dip"
            android:gravity="left|center_vertical"
            android:singleLine="true"
            android:ellipsize="end"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:text="@string/save_shift_as_template"/>
    </LinearLayout>
</ScrollView>