<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dip"
        android:paddingBottom="0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/hour_and_income_summary"
            android:gravity="left"
            android:textSize="16dip"
            android:textColor="?android:attr/textColorPrimary"/>

        <!-- Month -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/month"
                android:gravity="left"
                android:textSize="20dip"
                android:singleLine="true"
                android:paddingRight="4dip"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/month"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:fontFamily="sans-serif-light"
                android:textSize="20dip"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/border_color"/>

        <!-- Three Months -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/three_months"
                android:gravity="left"
                android:textSize="20dip"
                android:singleLine="true"
                android:paddingRight="4dip"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/three_months"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:fontFamily="sans-serif-light"
                android:textSize="20dip"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/border_color"/>

        <!-- Six Months -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/six_months"
                android:gravity="left"
                android:textSize="20dip"
                android:singleLine="true"
                android:paddingRight="4dip"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/six_months"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:fontFamily="sans-serif-light"
                android:textSize="20dip"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/border_color"/>

        <!-- Nine Months -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:gravity="center_vertical"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/nine_months"
                android:gravity="left"
                android:textSize="20dip"
                android:singleLine="true"
                android:paddingRight="4dip"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/nine_months"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:fontFamily="sans-serif-light"
                android:textSize="20dip"
                android:textColor="@color/blue"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/border_color"/>

        <!-- Year -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:paddingTop="4dip"
            android:paddingBottom="4dip"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/year"
                android:gravity="left"
                android:textSize="20dip"
                android:singleLine="true"
                android:paddingRight="4dip"
                android:textColor="?android:attr/textColorPrimary"/>

            <TextView
                android:id="@+id/year"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:fontFamily="sans-serif-light"
                android:textSize="20dip"
                android:textColor="@color/blue"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>